--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,7 +5,7 @@
             "package": "apex-rollup",
             "path": "rollup",
             "versionName": "Fixing BigDecimal issues, standardizing plugin infrastructure",
-            "versionNumber": "1.3.23.0",
+            "versionNumber": "1.3.24.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -106,6 +106,7 @@
         "apex-rollup@1.3.20-0": "04t6g000008SiaJAAS",
         "apex-rollup@1.3.21-0": "04t6g000008SigrAAC",
         "apex-rollup@1.3.22-0": "04t6g000008SijvAAC",
-        "apex-rollup@1.3.23-0": "04t6g000008SitNAAS"
+        "apex-rollup@1.3.23-0": "04t6g000008SitNAAS",
+        "apex-rollup@1.3.24-0": "04t6g000008SitmAAC"
     }
 }
