--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "TODO: fixme",
+            "versionName": "Fixing issue with ultimate parent rollups and full recalculation",
             "versionNumber": "1.3.25.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
@@ -71,11 +71,11 @@
             "path": "plugins\\ExtraCodeCoverage",
             "package": "Apex Rollup - Extra Code Coverage",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.4.0",
+            "versionNumber": "0.0.5.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.3.23-0"
+                    "package": "apex-rollup@1.3.25-0"
                 }
             ]
         }
@@ -97,16 +97,13 @@
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.3-0": "04t6g000008Sii9AAC",
         "Apex Rollup - Extra Code Coverage@0.0.4-0": "04t6g000008SirqAAC",
-        "apex-rollup@1.3.16-0": "04t6g000008SiSdAAK",
-        "apex-rollup@1.3.17-0": "04t6g000008SiTgAAK",
-        "apex-rollup@1.3.18-0": "04t6g000008SiUyAAK",
-        "apex-rollup@1.3.19-0": "04t6g000008SiVIAA0",
+        "Apex Rollup - Extra Code Coverage@0.0.5-0": "04t6g000008SizvAAC",
         "apex-rollup@1.3.20-0": "04t6g000008SiaJAAS",
         "apex-rollup@1.3.21-0": "04t6g000008SigrAAC",
         "apex-rollup@1.3.22-0": "04t6g000008SijvAAC",
         "apex-rollup@1.3.23-0": "04t6g000008SitNAAS",
-        "apex-rollup@1.3.24-0": "04t6g000008Siv4AAC"
+        "apex-rollup@1.3.24-0": "04t6g000008Siv4AAC",
+        "apex-rollup@1.3.25-0": "04t6g000008SizqAAC"
     }
 }
