--- a/codecov.yml
+++ b/codecov.yml
@@ -1,12 +1,14 @@
 coverage:
-    status:
-        project:
-            default:
-                target: 75 # otherwise any regression in code coverage fails the build
-                threshold: 2%
-                if_ci_failed: success
-                flags:
-                    - Apex
-                    - LWC
-        patch: off
+  status:
+    project:
+      default:
+        target: 90
+        threshold: 2%
+        if_ci_failed: success
+        flags:
+          - Apex
+          - LWC
+    patch: off
 github_checks: false
+comment:
+  behavior: new
