--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "versionName": "Introducing Rollup Order By CMDT to replace Rollup__mdt.OrderByFirstLast__c - allows for multiple fields when arranging ordering for FIRST and LAST rollups. Bugfixes for grandparent/hierarchy rollups.",
-            "versionNumber": "1.4.0.0",
-            "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
+            "versionNumber": "1.4.1.0",
+            "versionDescription": "Upgrading to Spring 22, Rollup Order By fixes",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
@@ -82,7 +82,7 @@
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "53.0",
+    "sourceApiVersion": "54.0",
     "packageAliases": {
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
@@ -103,6 +103,7 @@
         "apex-rollup@1.3.23-0": "04t6g000008SitNAAS",
         "apex-rollup@1.3.24-0": "04t6g000008Siv4AAC",
         "apex-rollup@1.3.25-0": "04t6g000008Sj00AAC",
-        "apex-rollup@1.4.0-0": "04t6g000008Sj8oAAC"
+        "apex-rollup@1.4.0-0": "04t6g000008Sj8oAAC",
+        "apex-rollup@1.4.1-0": "04t6g000008SjGKAA0"
     }
 }
