--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Introducing Rollup Order By CMDT to replace Rollup__mdt.OrderByFirstLast__c - allows for multiple fields when arranging ordering for FIRST and LAST rollups. Bugfixes for grandparent/hierarchy rollups.",
-            "versionNumber": "1.4.1.0",
+            "versionName": "RollupCurrencyInfo now takes into account when currency values are null. Added sorting support for CONCAT/CONCAT_DISTINCT operations. Fixed same-object rollup reparenting.",
+            "versionNumber": "1.4.2.0",
             "versionDescription": "Upgrading to Spring 22, Rollup Order By fixes",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
