Updating tooling to use @jongpie's excellent packageAlias sorting through @jongpie/sfdx-bummer-plugin

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@babel/core": "latest",
     "@babel/eslint-parser": "latest",
+    "@jongpie/sfdx-bummer-plugin": "latest",
     "@ljharb/eslint-config": "latest",
     "@lwc/eslint-plugin-lwc": "latest",
     "@prettier/plugin-xml": "latest",
@@ -45,7 +46,7 @@
     "create:package:code-coverage": "pwsh -Command \"&{ . ./scripts/generatePackage.ps1; Generate -PackageName '\"Apex Rollup - Extra Code Coverage\"' -ReadmePath \"./plugins/ExtraCodeCoverage/README.md\" }\"",
     "husky:pre-commit": "lint-staged",
     "lint:verify": "eslint **/lwc/**",
-    "prepare": "husky install && sfdx plugins:link ./node_modules/@salesforce/sfdx-scanner",
+    "prepare": "husky install && sfdx plugins:link ./node_modules/@salesforce/sfdx-scanner && sfdx plugins:link ./node_modules/@jongpie/sfdx-bummer-plugin",
     "prettier": "prettier",
     "scan": "sfdx scanner:run --pmdconfig config/pmd-ruleset.xml --target . --engine pmd --severity-threshold 3",
     "test": "npm run test:apex && npm run test:lwc",
