--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Introducing Rollup Order By CMDT to replace Rollup__mdt.OrderByFirstLast__c - allows for multiple fields when arranging ordering for FIRST and LAST rollups. Bugfixes for grandparent/hierarchy rollups.",
-            "versionNumber": "1.4.1.0",
+            "versionName": "RollupCurrencyInfo now takes into account when currency values are null. Added sorting support for CONCAT/CONCAT_DISTINCT operations. Fixed same-object rollup reparenting.",
+            "versionNumber": "1.4.2.0",
             "versionDescription": "Upgrading to Spring 22, Rollup Order By fixes",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -84,26 +84,27 @@
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "54.0",
     "packageAliases": {
-        "apex-rollup": "0Ho6g000000TNcOCAW",
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
         "Apex Rollup - Custom Logger@0.0.9-0": "04t6g000008Si1GAAS",
         "Apex Rollup - Custom Logger@0.0.10-0": "04t6g000008SijqAAC",
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
-        "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
-        "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
-        "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
-        "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
-        "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
-        "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
-        "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
         "Apex Rollup - Extra Code Coverage@0.0.5-0": "04t6g000008SizvAAC",
         "Apex Rollup - Extra Code Coverage@0.0.6-0": "04t6g000008Sj8jAAC",
+        "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
+        "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
+        "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
+        "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
+        "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
+        "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
+        "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
+        "apex-rollup": "0Ho6g000000TNcOCAW",
         "apex-rollup@1.3.22-0": "04t6g000008SijvAAC",
         "apex-rollup@1.3.23-0": "04t6g000008SitNAAS",
         "apex-rollup@1.3.24-0": "04t6g000008Siv4AAC",
         "apex-rollup@1.3.25-0": "04t6g000008Sj00AAC",
         "apex-rollup@1.4.0-0": "04t6g000008Sj8oAAC",
-        "apex-rollup@1.4.1-0": "04t6g000008SjGKAA0"
+        "apex-rollup@1.4.1-0": "04t6g000008SjGKAA0",
+        "apex-rollup@1.4.2-0": "04t6g000008SjHhAAK"
     }
 }
