--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixes hashing implementation to reduce CPU time spent detecting recursion",
-            "versionNumber": "1.4.3.0",
+            "versionName": "Fixes query issue with top-level OR clauses in full recalculations",
+            "versionNumber": "1.4.4.0",
             "versionDescription": "Upgrading to Spring 22, Rollup Order By fixes",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -71,11 +71,11 @@
             "path": "plugins\\ExtraCodeCoverage",
             "package": "Apex Rollup - Extra Code Coverage",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.6.0",
+            "versionNumber": "0.0.7.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.4.0-0"
+                    "package": "apex-rollup@1.4.4-0"
                 }
             ]
         }
@@ -91,6 +91,7 @@
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
         "Apex Rollup - Extra Code Coverage@0.0.5-0": "04t6g000008SizvAAC",
         "Apex Rollup - Extra Code Coverage@0.0.6-0": "04t6g000008Sj8jAAC",
+        "Apex Rollup - Extra Code Coverage@0.0.7-0": "04t6g000008SjIVAA0",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
         "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
@@ -99,13 +100,10 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.3.22-0": "04t6g000008SijvAAC",
-        "apex-rollup@1.3.23-0": "04t6g000008SitNAAS",
-        "apex-rollup@1.3.24-0": "04t6g000008Siv4AAC",
-        "apex-rollup@1.3.25-0": "04t6g000008Sj00AAC",
         "apex-rollup@1.4.0-0": "04t6g000008Sj8oAAC",
         "apex-rollup@1.4.1-0": "04t6g000008SjGKAA0",
         "apex-rollup@1.4.2-0": "04t6g000008SjHhAAK",
-        "apex-rollup@1.4.3-0": "04t6g000008SjHwAAK"
+        "apex-rollup@1.4.3-0": "04t6g000008SjHwAAK",
+        "apex-rollup@1.4.4-0": "04t6g000008SjIaAAK"
     }
 }
