--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,9 +4,9 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixes query issue with top-level OR clauses in full recalculations",
-            "versionNumber": "1.4.4.0",
-            "versionDescription": "Upgrading to Spring 22, Rollup Order By fixes",
+            "versionName": "Scripting updates pulled back from salesforce-round-robin, rollup calculator uses less memory/CPU time now",
+            "versionNumber": "1.4.5.0",
+            "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
