--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,9 +4,9 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixes query issue with top-level OR clauses in full recalculations",
-            "versionNumber": "1.4.4.0",
-            "versionDescription": "Upgrading to Spring 22, Rollup Order By fixes",
+            "versionName": "Scripting updates pulled back from salesforce-round-robin, rollup calculator uses less memory/CPU time now",
+            "versionNumber": "1.4.5.0",
+            "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
                 "path": "extra-tests"
@@ -104,6 +104,7 @@
         "apex-rollup@1.4.1-0": "04t6g000008SjGKAA0",
         "apex-rollup@1.4.2-0": "04t6g000008SjHhAAK",
         "apex-rollup@1.4.3-0": "04t6g000008SjHwAAK",
-        "apex-rollup@1.4.4-0": "04t6g000008SjIaAAK"
+        "apex-rollup@1.4.4-0": "04t6g000008SjIaAAK",
+        "apex-rollup@1.4.5-0": "04t6g000008SjRTAA0"
     }
 }
