--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixes issue when lookup fields are cleared - some rollup operations were running twice in this specific reparenting context",
-            "versionNumber": "1.4.6.0",
+            "versionName": "Pipeline updates and async efficiency improvements",
+            "versionNumber": "1.4.7.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -106,6 +106,7 @@
         "apex-rollup@1.4.3-0": "04t6g000008SjHwAAK",
         "apex-rollup@1.4.4-0": "04t6g000008SjIaAAK",
         "apex-rollup@1.4.5-0": "04t6g000008SjRTAA0",
-        "apex-rollup@1.4.6-0": "04t6g000008SjSWAA0"
+        "apex-rollup@1.4.6-0": "04t6g000008SjSWAA0",
+        "apex-rollup@1.4.7-0": "04t6g000008SjYzAAK"
     }
 }
