Revamping README and Contributing documents

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Adding FLS for RollupControl__mdt.ShouldDuplicateRulesBeIgnored__c, adding to page layout",
-            "versionNumber": "1.4.9.0",
+            "versionName": "Revamped README",
+            "versionNumber": "1.4.10.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
