Fixes #287 by adding junction object support in conjunction with grandparent rollups

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Revamped README, added ability to filter on non-polymorphic Type fields",
-            "versionNumber": "1.4.10.0",
+            "versionName": "Added support for junction objects as the intermediate hop for grandparent rollups",
+            "versionNumber": "1.4.11.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -71,11 +71,11 @@
             "path": "plugins\\ExtraCodeCoverage",
             "package": "Apex Rollup - Extra Code Coverage",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.8.0",
+            "versionNumber": "0.0.9.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.4.10-0"
+                    "package": "apex-rollup@1.4.11-0"
                 }
             ]
         }
@@ -93,6 +93,7 @@
         "Apex Rollup - Extra Code Coverage@0.0.6-0": "04t6g000008Sj8jAAC",
         "Apex Rollup - Extra Code Coverage@0.0.7-0": "04t6g000008SjIVAA0",
         "Apex Rollup - Extra Code Coverage@0.0.8-0": "04t6g000008SjuzAAC",
+        "Apex Rollup - Extra Code Coverage@0.0.9-0": "04t6g000008Sk13AAC",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
         "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
@@ -104,6 +105,7 @@
         "apex-rollup@1.4.7-0": "04t6g000008SjYzAAK",
         "apex-rollup@1.4.8-0": "04t6g000008SjuVAAS",
         "apex-rollup@1.4.9-0": "04t6g000008SjufAAC",
-        "apex-rollup@1.4.10-0": "04t6g000008Sjv4AAC"
+        "apex-rollup@1.4.10-0": "04t6g000008Sjv4AAC",
+        "apex-rollup@1.4.11-0": "04t6g000008Sk0yAAC"
     }
 }
