--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Added support for junction objects as the intermediate hop for grandparent rollups",
-            "versionNumber": "1.4.11.0",
+            "versionName": "Remove inherited sharing in favor of always explicitly using without sharing. Added missing SOQL date literals",
+            "versionNumber": "1.4.12.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -106,6 +106,7 @@
         "apex-rollup@1.4.8-0": "04t6g000008SjuVAAS",
         "apex-rollup@1.4.9-0": "04t6g000008SjufAAC",
         "apex-rollup@1.4.10-0": "04t6g000008Sjv4AAC",
-        "apex-rollup@1.4.11-0": "04t6g000008Sk1IAAS"
+        "apex-rollup@1.4.11-0": "04t6g000008Sk1IAAS",
+        "apex-rollup@1.4.12-0": "04t6g000008Sk1rAAC"
     }
 }
