--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Remove inherited sharing in favor of always explicitly using without sharing. Added missing SOQL date literals",
-            "versionNumber": "1.4.12.0",
+            "versionName": "Make parent-reset calculator more reliable when used in conjunction with full recalcs",
+            "versionNumber": "1.4.13.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -107,6 +107,7 @@
         "apex-rollup@1.4.9-0": "04t6g000008SjufAAC",
         "apex-rollup@1.4.10-0": "04t6g000008Sjv4AAC",
         "apex-rollup@1.4.11-0": "04t6g000008Sk1IAAS",
-        "apex-rollup@1.4.12-0": "04t6g000008Sk1rAAC"
+        "apex-rollup@1.4.12-0": "04t6g000008Sk1rAAC",
+        "apex-rollup@1.4.13-0": "04t6g000008Sk7CAAS"
     }
 }
