--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Reduced code surrounding the display of Rollup Operation picklist values for the full recalc app.",
+            "versionName": "Reduced code surrounding the display of Rollup Operation picklist values for the full recalc app. Fixed NPE exposed when trying to MIN on Date fields with no matching items.",
             "versionNumber": "1.5.1.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
