--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Added ability to perform parent-level recalc using LWC button for one-to-many grandparent rollups",
+            "versionName": "Fixed a bug with Ultimate Parent rollups occasionally querying the ultimate parent field too soon, quality of life updates for intermediate object changes correctly triggering One To Many rollups",
             "versionNumber": "1.5.3.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
