--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Added case-insensitivity to RollupEvaluator",
-            "versionNumber": "1.5.2.0",
+            "versionName": "Fixed a bug with Ultimate Parent rollups occasionally querying the ultimate parent field too soon, quality of life updates for intermediate object changes correctly triggering One To Many rollups",
+            "versionNumber": "1.5.3.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -106,6 +106,7 @@
         "apex-rollup@1.4.13-0": "04t6g000008Sk7CAAS",
         "apex-rollup@1.5.0-0": "04t6g000008Sk8FAAS",
         "apex-rollup@1.5.1-0": "04t6g000008Sk8KAAS",
-        "apex-rollup@1.5.2-0": "04t6g000008Sk93AAC"
+        "apex-rollup@1.5.2-0": "04t6g000008Sk93AAC",
+        "apex-rollup@1.5.3-0": "04t6g000008SkBEAA0"
     }
 }
