Small changes, to start, for RollupEvaluator - working towards efficiency improvements by attempting to cut down on some of the CPU processing time when parsing where clauses

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixed a bug with Ultimate Parent rollups occasionally querying the ultimate parent field too soon, quality of life updates for intermediate object changes correctly triggering One To Many rollups",
-            "versionNumber": "1.5.3.0",
+            "versionName": "Evaluator CPU time improvements",
+            "versionNumber": "1.5.4.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
