--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Small RollupEvaluator improvements (hopefully more to come, there), and added Rollup Plugin capability to customize how parent-level records are updated.",
-            "versionNumber": "1.5.4.0",
+            "versionName": "Fixed an issue reported by Katherine West where CONCAT_DISTINCT was not always properly retrieving additional calc items",
+            "versionNumber": "1.5.5.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -108,6 +108,7 @@
         "apex-rollup@1.5.1-0": "04t6g000008Sk8KAAS",
         "apex-rollup@1.5.2-0": "04t6g000008Sk93AAC",
         "apex-rollup@1.5.3-0": "04t6g000008SkBEAA0",
-        "apex-rollup@1.5.4-0": "04t6g000008SkJdAAK"
+        "apex-rollup@1.5.4-0": "04t6g000008SkJdAAK",
+        "apex-rollup@1.5.5-0": "04t6g000008SkKbAAK"
     }
 }
