--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -109,6 +109,7 @@
         "apex-rollup@1.5.2-0": "04t6g000008Sk93AAC",
         "apex-rollup@1.5.3-0": "04t6g000008SkBEAA0",
         "apex-rollup@1.5.4-0": "04t6g000008SkJdAAK",
-        "apex-rollup@1.5.5-0": "04t6g000008SkKqAAK"
+        "apex-rollup@1.5.5-0": "04t6g000008SkKqAAK",
+        "apex-rollup@1.5.6-0": "04t6g000008SkMSAA0"
     }
 }
