--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Added support for limiting the number of calc items considered for various rollup operations - allowing for things like SUM of top five opportunities this month. Fixed an issue which would sometimes occur while evaluating parent-level fields. Added support for MOST as a new rollup operation",
-            "versionNumber": "1.5.6.0",
+            "versionName": "Updating documentation, fixed issue with hierarchical rollups not always querying all fields",
+            "versionNumber": "1.5.7.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -71,11 +71,11 @@
             "path": "plugins\\ExtraCodeCoverage",
             "package": "Apex Rollup - Extra Code Coverage",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.10.0",
+            "versionNumber": "0.0.11.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.0-0"
+                    "package": "apex-rollup@1.5.7-0"
                 }
             ]
         }
@@ -92,6 +92,7 @@
         "Apex Rollup - Extra Code Coverage@0.0.8-0": "04t6g000008SjuzAAC",
         "Apex Rollup - Extra Code Coverage@0.0.9-0": "04t6g000008Sk13AAC",
         "Apex Rollup - Extra Code Coverage@0.0.10-0": "04t6g000008Sk7gAAC",
+        "Apex Rollup - Extra Code Coverage@0.0.11-0": "04t6g000008SkNaAAK",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
         "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
@@ -100,16 +101,13 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.4.10-0": "04t6g000008Sjv4AAC",
-        "apex-rollup@1.4.11-0": "04t6g000008Sk1IAAS",
-        "apex-rollup@1.4.12-0": "04t6g000008Sk1rAAC",
-        "apex-rollup@1.4.13-0": "04t6g000008Sk7CAAS",
         "apex-rollup@1.5.0-0": "04t6g000008Sk8FAAS",
         "apex-rollup@1.5.1-0": "04t6g000008Sk8KAAS",
         "apex-rollup@1.5.2-0": "04t6g000008Sk93AAC",
         "apex-rollup@1.5.3-0": "04t6g000008SkBEAA0",
         "apex-rollup@1.5.4-0": "04t6g000008SkJdAAK",
         "apex-rollup@1.5.5-0": "04t6g000008SkKqAAK",
-        "apex-rollup@1.5.6-0": "04t6g000008SkMhAAK"
+        "apex-rollup@1.5.6-0": "04t6g000008SkMhAAK",
+        "apex-rollup@1.5.7-0": "04t6g000008SkNkAAK"
     }
 }
