Committing WIP from #321 - testing out a smoother approach for flattening cached flow rollups

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -108,6 +108,7 @@
         "apex-rollup@1.5.4-0": "04t6g000008SkJdAAK",
         "apex-rollup@1.5.5-0": "04t6g000008SkKqAAK",
         "apex-rollup@1.5.6-0": "04t6g000008SkMhAAK",
-        "apex-rollup@1.5.7-0": "04t6g000008SkNkAAK"
+        "apex-rollup@1.5.7-0": "04t6g000008SkNkAAK",
+        "apex-rollup@1.5.8-0": "04t6g000008SkOTAA0"
     }
 }
