Updating sfdx-project.json and README with WIP versions of the package for testing

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Slight optimizations within RollupCalculator",
+            "versionName": "Slight optimizations within RollupCalculator, fixed several bugs present when deferred flow rollups added multiple calc items in separate transactions",
             "versionNumber": "1.5.8.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
@@ -109,6 +109,6 @@
         "apex-rollup@1.5.5-0": "04t6g000008SkKqAAK",
         "apex-rollup@1.5.6-0": "04t6g000008SkMhAAK",
         "apex-rollup@1.5.7-0": "04t6g000008SkNkAAK",
-        "apex-rollup@1.5.8-0": "04t6g000008SkOTAA0"
+        "apex-rollup@1.5.8-0": "04t6g000008SkPMAA0"
     }
 }
