--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Updating documentation, fixed issue with hierarchical rollups not always querying all fields",
-            "versionNumber": "1.5.7.0",
+            "versionName": "Slight optimizations within RollupCalculator, fixed several bugs present when deferred flow rollups added multiple calc items in separate transactions",
+            "versionNumber": "1.5.8.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -108,6 +108,7 @@
         "apex-rollup@1.5.4-0": "04t6g000008SkJdAAK",
         "apex-rollup@1.5.5-0": "04t6g000008SkKqAAK",
         "apex-rollup@1.5.6-0": "04t6g000008SkMhAAK",
-        "apex-rollup@1.5.7-0": "04t6g000008SkNkAAK"
+        "apex-rollup@1.5.7-0": "04t6g000008SkNkAAK",
+        "apex-rollup@1.5.8-0": "04t6g000008SkRSAA0"
     }
 }
