--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Slight optimizations within RollupCalculator, fixed several bugs present when deferred flow rollups added multiple calc items in separate transactions",
-            "versionNumber": "1.5.8.0",
+            "versionName": "Bugfixes for date literals associated with QUARTER/FISCAL_QUARTER",
+            "versionNumber": "1.5.9.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
